# trial-mcp

./: .gitignore  README.md  baseline_model_evaluation.txt  client.py  design.md  evaluation_pipeline.py  main.py  pyproject.toml  scratch.py
backend/: README.md  client.py  evaluation_pipeline.py  main.py  mcp_config.json  pyproject.toml  requirements.txt  run_pipeline.py
backend/trial_mcp_matching/: run_matching.py
backend/trial_mcp_ranking/: TrialMCP.py  rank_results.py  run_aggregation.py
backend/trial_mcp_retrieval/: hybrid_fusion_retrieval.py  keyword_generation.py
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/components/: hero-section.tsx
frontend/components/diagrams/: metrics-charts.tsx
trial_mcp_matching/: TrialMCP.py  run_matching.py
trial_mcp_ranking/: TrialMCP.py  run_aggregation.py
trial_mcp_retrieval/: keyword_generation.py
trialgpt_matching/: TrialGPT.py  run_matching.py
trialgpt_ranking/: TrialGPT.py  rank_results.py  run_aggregation.py
trialgpt_retrieval/: hybrid_fusion_retrieval.py  keyword_generation.py  sigir_nctids.json
